# kitconcept.intranet

./: .gitignore  .meta.toml  .pre-commit-config.yml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  Makefile  README.md  check-recommended-addons.js  docker-compose-acceptance.yml  docker-compose-ci.yml  docker-compose-dev.yml  docker-compose-solr.yml  docker-compose.yml  instance.yaml  mx.ini  pyproject.toml  repository.toml  requirements-docker.txt  setup.py  towncrier.toml  tox.ini  version.txt
.github/: CODEOWNERS  backend-lint.yml
backend/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.acceptance  Dockerfile.beispiele  LICENSE.md  MANIFEST.in  Makefile  README.md  instance-local.yaml.example  instance.yaml  mx.ini  pyproject.toml  setup.py  tox.ini  version.txt
backend/news/: +190.internal  +192.internal  +289.internal  +365.bugfix  +a11y.test  +academic_title.bugfix  +acceptance-image.test  +acceptance-solr-makefile.internal  +acceptance.test  +add:abelIndexersLocationOU.bugfix  +addCurrentUserQuerystringOperation.feature  +addFacetFieldsPersonSearch.feature  +addMissingDEtranslation.bugfix  +addResponsibilitiesField.feature  +addSupportForDeepLBlocksTesting.feature  +add_comments_exampleContent.internal  +autoinclude.bugfix  +barcelonetaprofileback.bugfix  +byline.feature  +contactlist.feature  +core-a6.bugfix  +core.breaking  +core.feature  +core.internal  +core1.0.0.bugfix  +core1a12.internal  +core1a23.bugfix  +core2a7.bugfix  +core2a9.internal  +corea26.bugfix  +corea27.bugfix  +coreb3.bugfix  +coreb5.bugfix  +creation.bugfix  +creation.feature  +default-content.internal  +deps.internal  +docker copy.internal  +docker-constraints.internal  +docker.internal  (+175 more)
backend/scripts/: create-site.py  create_site.py  default.json  dump-constraints.py  fix_language.py  review_reminder.py  solr_activate_and_reindex.py
backend/src/kitconcept/: __init__.py
backend/src/kitconcept/intranet/: __init__.py  _types.py  configure.zcml  controlpanel.py  dependencies.zcml  distributions.zcml  handlers.py  overrides.zcml  permissions.zcml  profiles.zcml  queryparser.py  search.py  subscribers.py  testing.py
backend/src/kitconcept/intranet/behaviors/: blocks_settings.py  clm.py  comment_count.py  configure.zcml  content_review.py  customizations.py  enable_likes.py  lcm.py  location.py  organisational_unit.py  person.py  theming.py  votes.py
backend/src/kitconcept/intranet/cache/: __init__.py
backend/src/kitconcept/intranet/content/: location.py  organisational_unit.py
backend/src/kitconcept/intranet/controlpanels/: configure.zcml  intranet.py
backend/src/kitconcept/intranet/deserializers/: blocks.py  configure.zcml  responsabilities.py
backend/src/kitconcept/intranet/indexers/: configure.zcml  location.py  organisational_unit.py  responsabilities.py  responsibilities.py
backend/src/kitconcept/intranet/locales/: __main__.py  kitconcept.intranet.pot  update.py
backend/src/kitconcept/intranet/serializers/: blocks.py  configure.zcml  event.py  person.py  summary.py  vocab.py
backend/src/kitconcept/intranet/services/: byline.py  clm.py  configure.zcml  feedback_contact_form.py  inherit.py  lcm.py  navroot.py  review.py  types.py  votes.py
backend/src/kitconcept/intranet/setuphandlers/: __init__.py  content.py  users.json
backend/src/kitconcept/intranet/subscribers/: configure.zcml  vocabulary.py
backend/src/kitconcept/intranet/testing/: __init__.py  a11y.py  base.py  deepl.py  logo.py  robot.py
backend/src/kitconcept/intranet/upgrades/: __init__.py  configure.zcml  helpers.py  v20240228001.py  v20250317001.py
backend/src/kitconcept/intranet/utils/: batch_process.py  calc_due_date.py  creation.py  get_person.py  review_due_notifier.py  scripts.py
backend/src/kitconcept/intranet/vocabularies/: base.py  configure.zcml  content_review.py  location.py  organisational_unit.py  person.py  responsabilities.py  responsibilities.py
backend/tests/: conftest.py  docker-compose.yml
backend/tests/content_types/: test_ct_document.py  test_ct_event.py  test_ct_file.py  test_ct_image.py  test_ct_link.py  test_ct_lrf.py  test_ct_news_item.py  test_ct_person.py  test_ct_plone_site.py  test_fti.py  test_wiki_page.py  test_workspace.py
backend/tests/controlpanels/: conftest.py  test_cp_intranet.py
backend/tests/creation/: conftest.py  test_creation.py  test_creation_public.py  test_creation_restricted.py
backend/tests/creation/authentication/: conftest.py
backend/tests/creation/authentication/github/: conftest.py  test_auth_github_creation.py
backend/tests/creation/solr/: conftest.py  test_solr_creation.py
backend/tests/creation/workflow/: test_creation_public.py  test_creation_restricted.py
backend/tests/indexers/: conftest.py  test_ind_location.py  test_ind_organisational_unit.py  test_ind_responsibilities.py  test_responsibilities.py
backend/tests/registration/: conftest.py  disabled_test_distribution.py  test_distribution.py  test_registration.py
backend/tests/services/: conftest.py
backend/tests/services/clm/: conftest.py  test_clm.py
backend/tests/services/lcm/: test_lcm.py
backend/tests/services/review/: conftest.py  test_review_post.py
backend/tests/services/search/: conftest.py  test_current_user_filter.py  test_solr_search.py  test_user_relevance_boost.py
backend/tests/services/site/: test_site_get.py  test_site_get_restricted.py
backend/tests/services/system/: test_system_get.py
backend/tests/setup/: test_registry.py  test_setup_install.py  test_setup_uninstall.py
backend/tests/subscribers/: conftest.py  test_sub_vocabulary.py
backend/tests/utils/: default.json  test_calc_due_date.py  test_scripts.py
backend/tests/utils/authentication/: test_authomatic.py  test_keycloak.py  test_oidc.py
backend/tests/vocabularies/: conftest.py  test_voc_academic_titles.py  test_voc_base.py  test_voc_location.py  test_voc_organisational_unit.py  test_voc_responsibilities.py  test_vocab_content_review_intervals.py  test_vocab_content_review_users.py  test_vocab_responsibilities.py
(+968 files in other folders)
