[project]
name = "kitconcept.intranet"
dynamic = ["version"]
description = "A Plone distribution for Intranets with Plone. Created by kitconcept."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "kitconcept GmbH", email = "info@kitconcept.com" },
]
keywords = ["CMS", "Plone", "Python", "Intranet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: Distribution",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Products.CMFPlone==6.1.1",
    "collective.person",
    "plone.api",
    "plone.distribution",
    "plone.restapi>=9.13.2",
    "plone.volto>=5.1.0",
    "python-dateutil",
    "kitconcept.voltolighttheme==6.0.0a24",
]

[project.optional-dependencies]
test = [
    "horse-with-no-namespace",
    "mypy>=1.15.0",
    "plone.app.testing",
    "plone.restapi[test]",
    "pytest",
    "pytest-cov",
    "pytest-docker>=3.2.0",
    "pytest-plone>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/kitconcept/kitconcept.intranet"
PyPI = "https://pypi.python.org/pypi/kitconcept.intranet"
Source = "https://github.com/kitconcept/kitconcept.intranet"
Tracker = "https://github.com/kitconcept/kitconcept.intranet/issues"

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/kitconcept/intranet/about.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kitconcept"]

[tool.towncrier]
package = "kitconcept.intranet"
package_dir = "src"
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/kitconcept/kitconcept.intranet/issue/{issue})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Feature"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfix"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".flake8",
    "dependabot.yml",
    "mx.ini",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["kitconcept.intranet", "tests"]
branch = true
parallel = true
omit = [
  "src/kitconcept/intranet/locales/__init__.py",
  "src/kitconcept/intranet/locales/__main__.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
